[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cha-parser"
version = "1.0.0"
description = "CLAN's CHA file parser for CHILDES/SLI"
readme = "README.md"
authors = [{name = "ssuai"}]
license = {text = "MIT"}
classifiers = ["Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License"]
dependencies = ["pandas>=1.5.0", "lexical-diversity>=1.7"]
requires-python = ">=3.8"

[project.scripts]
cha-parse = "cha.parser:main"

